--- a/learnhtml/learn2.html
+++ b/learnhtml/learn2.html
@@ -6,7 +6,7 @@
     <title></title>
 </head>
 <body>
-    <h1>Kontakt</h1>
+    <h1>Contact</h1>
     <a href="learn1.html">Zpět na hlavní stranu</a>
 
 
