--- a/learnhtml/learn1.html
+++ b/learnhtml/learn1.html
@@ -6,9 +6,11 @@
     <title>Jak vyrobit židly</title>
 </head>
 <body>
-    <h1>Nadpis</h1>
+    <h1 id ="nadpis1">Nadpis</h1>
      <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Quam, dolorum est officia voluptatum asperiores quo,<br> <em>Tohle kurzíva</em> <br> <strong>Tohle tučný text</strong> <br></p> 
+    <p class="first">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Quam, dolorum est officia voluptatum asperiores quo,<br> <em>Tohle kurzíva</em> <br> <strong>Tohle tučný text</strong> <br></p>
+    <hr>
+    <p class="second"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, facere. Laborum ut, ex fugiat fugit magnam id amet atque. Reiciendis dicta vero et quibusdam dolorum numquam ullam voluptatum fugiat incidunt!</p>
     <hr>
     <h2>Nadpis2</h2>
     <ul>
@@ -16,6 +18,7 @@
         <li>Cukr</li>
         <li>Vajíčka</li>
         <li>Sůl</li>
+        <li><a href="https://ucet.seznam.cz/">seznam</a></li>
     </ul>
 
     <hr>
