update html css

--- a/learn5.html
+++ b/learn5.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles4.css">
+    <link rel="stylesheet" href="styles5.css">
     <title>Web</title>
 </head>
 <body>
@@ -13,6 +13,30 @@
 
     <main>
         <h1>Formulář</h1>
+        <form action="">
+
+            <input type="text" placeholder="Name"><br>
+            <input type="password"placeholder="Password"><br>
+            <input type="email"placeholder="Email"><br>
+            <input type="date"><br>
+            <textarea name="" id=""cols="30"rows="10"></textarea> <br>
+            <input type="submit" value="send"> <br>
+            <hr>
+
+            <form action="">
+                <select name="" id="">
+                    <option value="">Czech</option>
+                    <option value="">English</option>
+                    <option value="">History</option>
+                </select> <br>
+
+                <input type="radio">Yellow<br>
+                <input type="radio">Blue<br>
+                <input type="radio">Orange<br>
+                <input type="submit" value="Send">
+            </form>
+            
+        </form>
 
     </main>
 
