--- a/learnhtml/learn1.html
+++ b/learnhtml/learn1.html
@@ -2,7 +2,7 @@
 <html lang = "cs">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles1.css">
     <title>Jak vyrobit židly</title>
 </head>
 <body>
