--- a/project1/learn7.html
+++ b/project1/learn7.html
@@ -19,7 +19,7 @@
 
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui perspiciatis placeat odio architecto commodi et vel molestias, eius dicta nam! Accusantium nulla dolores culpa odio, officiis temporibus molestiae commodi obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, laudantium pariatur. Dolores saepe maxime, soluta culpa, quisquam doloribus dolorum vel omnis reprehenderit fuga veniam nemo sequi odit molestiae cum eligendi! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur dignissimos unde inventore voluptatum atque beatae, nihil nesciunt laudantium, sint, excepturi aut quisquam molestiae fuga aliquam temporibus impedit ut tenetur doloremque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque unde molestias laboriosam eius facilis voluptatem saepe distinctio a aperiam non? Totam velit culpa et fuga impedit doloremque modi libero nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, adipisci dicta harum odio at sed assumenda voluptatum dolorem laboriosam et suscipit atque inventore, voluptates provident veritatis modi quod ducimus nam?</p>
 
-        <h2>Zaregistruj se a začni facebookovat</h2>
+        <h2>Zaregistruj se a začni frogbookovat</h2>
         <form action="">
             <input type="text" placeholder="Jméno"><br>
             <input type="text" placeholder="Příjmení"><br>
@@ -32,7 +32,7 @@
 
     <footer>
 
-        <h3 class="footer">© Frogbook 2019</h3>
+        <h3 class="footer">&copy; Frogbook 2024</h3>
 
     </footer>
 
