--- a/project2/learn8.html
+++ b/project2/learn8.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles8.css">
-    <title>MapleStore</title>
+    <title>MaplePhone Store</title>
 </head>
 
 <body>
@@ -24,7 +24,10 @@
     </header>
 
     <main>
-        <img src=>
+        <div class="firstphoto">
+        <img src="assets/iphoneXS.png">
+        </div>
+        <h2>IPhone&nbsp;11&nbsp;Pro<br>Fotoaparáty.&nbsp;Displej.&nbsp;Výkon.&nbsp;Všechno Pro</h2>
     </main>
 
     <footer>
