--- a/project2/tv.html
+++ b/project2/tv.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="mac.html">Mac</a></li>
                 <li><a href="ipad.html">IPad</a></li>
-                <li><a href="iphone.html">IPhone</a></li>
+                <li><a href="index.html">IPhone</a></li>
                 <li><a href="watch.html">Watch</a></li>
                 <li><a href="tv.html">TV</a></li>
                 <li><a href="music.html">Music</a></li>
