--- a/project2/watch.html
+++ b/project2/watch.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="mac.html">Mac</a></li>
                 <li><a href="ipad.html">IPad</a></li>
-                <li><a href="iphone.html">IPhone</a></li>
+                <li><a href="index.html">IPhone</a></li>
                 <li><a href="watch.html">Watch</a></li>
                 <li><a href="tv.html">TV</a></li>
                 <li><a href="music.html">Music</a></li>
@@ -25,7 +25,7 @@
 
     <main>
         <div class="firstphoto">
-            <img src="assets/watch.png">
+            <img src="assets/watch.png" class="watch-img">
         </div>
         <h2 class="macbook-text">Naše zdaleka nejvýkonnější profesionální řada</h2>
     </main>
