--- a/project3/index.html
+++ b/project3/index.html
@@ -8,13 +8,29 @@
 </head>
 <body>
     <header>
+
+        <div class="nav-bar row">
+            <div id="logo">
+                <img src="assets/pizzalogo.png" alt="logo">
+            </div>
+
+            <nav>
+                <ul>
+                    <li><a href="#">Jedna</a></li>
+                    <li><a href="#">Jedna</a></li>
+                    <li><a href="#">Jedna</a></li>
+                    <li><a href="#">Jedna</a></li>
+                    <li><a href="#">Jedna</a></li>
+                </ul>
+            </nav>
+        </div>
+
         <div class="header-text">
             <h1>Nejlepší Pizza v České Republice</h1>
             <a href="#" class="btn btn-full">První tlačítko</a>
             <a href="#" class="btn btn-empty">Druhé tlačítko</a>
         </div>
 
-        
     </header>
 
     <main>
