--- a/project3/index.html
+++ b/project3/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="grid/grid.css">
     <title>Web</title>
 </head>
 <body>
@@ -34,7 +35,22 @@
     </header>
 
     <main>
+        <section class="about-us row">
+            <div class="heading-main">
+                <h2>Naše Pizza</h2>
+            </div>
+            <div class="pizza-example">
 
+                <div class="col span-1-of-2">
+                    <img src="assets/pizza1.jpg">
+                </div>
+
+                <div class="col span-1-of-2">
+                    <img src="assets/pizza2.jpg">             
+                </div>
+
+            </div>
+        </section>
     </main>
 
     <footer>
