--- a/project3/index.html
+++ b/project3/index.html
@@ -35,6 +35,7 @@
     </header>
 
     <main>
+
         <section class="about-us row">
             <div class="heading-main">
                 <h2>Naše Pizza</h2>
@@ -49,6 +50,80 @@
                     <img src="assets/pizza2.jpg">             
                 </div>
 
+            </div>
+        </section>
+
+        <section class="our-pizza row">
+
+            <div class="heading-main">
+                <h2>O naší pizze</h2>
+            </div>
+
+            <div class="pizza-info">
+
+                <div class="col span-1-of-2">
+                    <img src="assets/pizza3.jpg">
+                </div>
+
+                <div class="col span-1-of-2">
+
+                    <div class="text-pizza">
+                        <div>1</div>
+                        <p>Naše pizza vyniká díky kamené peci, která zajišťuje dokonalou křupavost kůrčičky a autentickou italskou chuť.
+                        Italskou pizzu si dáte nejen v Itálii.
+                        </p>
+                    </div>
+
+                    <div class="text-pizza">
+                        <div>2</div>
+                        <p>Objevte širokou škálu našich pizz s kvalitními surovinami a unikátními kombinacemi, které uspokojí každý chuťový profil.</p>
+                    </div>
+
+                    <div class="text-pizza">
+                        <div>3</div>
+                        <p>Sdílejte radostné okamžiky spojené s naší pizzou - od vášnivých kuchařů až po spokojené zákazníky, jsme jedna chutná komunita.</p>
+                    </div>
+
+                    <div class="text-pizza">
+                        <div>4</div>
+                        <p>Zůstaňte v obraze s našimi aktuálními nabídkami a akcemi, abyste nezmeškali příležitost ochutnat naše lahodné pizzy za výhodné ceny.</p>
+                    </div>  
+                </div>
+            </div>
+        </section>
+
+        <section class="reference">
+            <div class="heading-main">
+                <h2> Co o nás řekli naši zákazníci</h2>
+            </div>
+            <div class="customer reference row">
+                <div class="col span-1-of-3 one-reference" >
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam autem tenetur ab rem? Adipisci sunt, at cumque sed accusamus possimus sint necessitatibus similique libero fugiat maiores placeat, facilis magnam voluptas!
+                    </p>
+                    <div class="photo-name">
+                        <img src="assets/mario.png" alt="">
+                        <p>Josef1</p>
+                    </div>
+                </div>
+
+                <div class="col span-1-of-3 one-reference">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam autem tenetur ab rem? Adipisci sunt, at cumque sed accusamus possimus sint necessitatibus similique libero fugiat maiores placeat, facilis magnam voluptas!
+                    </p>
+                    <div class="photo-name">
+                        <img src="assets/mario.png" alt="">
+                        <p>Josef1</p>
+                    </div>
+                </div>
+
+                <div class="col span-1-of-3 one-reference">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam autem tenetur ab rem? Adipisci sunt, at cumque sed accusamus possimus sint necessitatibus similique libero fugiat maiores placeat, facilis magnam voluptas!
+                    </p>
+                    <div class="photo-name">
+                        <img src="assets/mario.png" alt="">
+                        <p>Josef1</p>
+                    </div>
+                </div>
+                
             </div>
         </section>
     </main>
