--- a/project3/index.html
+++ b/project3/index.html
@@ -111,7 +111,7 @@
                     </p>
                     <div class="photo-name">
                         <img src="assets/mario.png" alt="">
-                        <p>Josef1</p>
+                        <p>Josef2</p>
                     </div>
                 </div>
 
@@ -120,12 +120,39 @@
                     </p>
                     <div class="photo-name">
                         <img src="assets/mario.png" alt="">
-                        <p>Josef1</p>
+                        <p>Josef3</p>
                     </div>
                 </div>
                 
             </div>
         </section>
+
+        <section class="photo-gallery">
+
+            <div class="heading-main">
+                <h2>CO u nás můžete ochutnat</h2>
+            </div>
+
+            <div class="photos row">
+
+                <ul class="photo-segment">
+                    <li class="col span-1-of-2"><img src="assets/pizza1.jpg" alt=""></li>
+                    <li class="col span-1-of-2"><img src="assets/pizza2.jpg"alt=""></li>
+                </ul>
+
+                <ul class="photo-segment">
+                    <li class="col span-1-of-2"><img src="assets/pizza3.jpg" alt=""></li>
+                    <li class="col span-1-of-2"><img src="assets/pizza4.jpg"alt=""></li>
+                </ul>
+
+                <ul class="photo-segment">
+                    <li class="col span-1-of-2"><img src="assets/pizza5.jpg" alt=""></li>
+                    <li class="col span-1-of-2"><img src="assets/pizza1.jpg"alt=""></li>
+                </ul>
+
+            </div>
+
+        </section>    
     </main>
 
     <footer>
