--- a/project3/index.html
+++ b/project3/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="grid/grid.css">
-    <title>Web</title>
+    <title>Pizza Mnam</title>
+    <link rel="icon" type="image/icon" href="assets/favicon.ico">
 </head>
 <body>
     <header>
@@ -152,11 +154,37 @@
 
             </div>
 
-        </section>    
+        </section>
+        
+        <section class="formular">
+
+            <div class="heading-main">
+                <h2>Zeptejte se nás</h2>
+            </div>
+
+            <form action="" class="contact-form row">
+                <input type="text" class="type" placeholder="Jméno"><br>
+                <input type="text" class="text" placeholder="Příjmení"><br>
+                <input type="mail" class="mail" placeholder="Email"><br>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Vaše zpráva"></textarea><br>
+                <input type="submit" value="Odeslat">
+            </form>
+
+
+        </section>
     </main>
 
-    <footer>
+    <footer class="footer-page">
+        <div class="row">
+            <div class="social">
+                <p><a href="https://www.facebook.com/?locale=cs_CZ" target="_blank">Facebook</a></p>
+                <p><a href="https://www.Instagram.com/?locale=cs_CZ" target="_blank">Instagram</a></p>
+            </div>
 
+            <div class="footer-text">
+                Copywrite &copy; 2023 Pizza company. Všechna práva vyhrazena.
+            </div>
+        </div>
     </footer>
 
 
