--- a/project3/index.html
+++ b/project3/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="grid/grid.css">
+    <link rel="stylesheet" href="querries.css">
     <title>Pizza Mnam</title>
     <link rel="icon" type="image/icon" href="assets/favicon.ico">
 </head>
