--- a/project3/index.html
+++ b/project3/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="nav-bar row">
             <div id="logo">
-                <!-- <img src="assets/pizzalogo.png" alt="logo"> -->
+                <img src="assets/pizzalogo.png" alt="logo">
             </div>
 
             <nav>
@@ -37,13 +37,17 @@
                     <li><a href="#" class="jq--scroll-fotogalery-pizza">Fotogalerie</a></li>
                     <li><a href="#" class="jq--scroll-contact-pizza">Kontakt</a></li>
                 </ul>
+
+                <div class="mobile-nav-back"></div>
+                <a class="mobile-nav-icon jq--nav-icon"><img class="jq--image-menu" src="assets/menu.png" alt="menu"></a>
+ 
             </nav>
         </div>
 
         <div class="header-text">
             <h1>Nejlepší Pizza v České Republice</h1>
-            <a href="#" class="btn btn-full jq--scroll-button-first">První tlačítko</a>
-            <a href="#" class="btn btn-empty jq--scroll-button-second">Druhé tlačítko</a>
+            <a href="#" class="btn btn-full jq--scroll-button-first">Naše pizza</a>
+            <a href="#" class="btn btn-empty jq--scroll-button-second">Recenze</a>
         </div>
 
     </header>
